--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -8,9 +8,20 @@
     max-width: 1230px;
 }
 
+.header-utilities {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .header__logo {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
     font-size: 24px;
+}
+
+.header-nav__link {
+    color: #fff;
+    text-decoration: none;
 }
