--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -23,7 +23,16 @@
     max-width: 1230px;
 }
 
-.create-form {
+/* create-form */
+
+.section__title {
+    margin: 0 auto;
+    width: 70%;
+    text-align: left;
+    font-weight: bold;
+}
+
+.create-form, .search-form {
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -31,23 +40,35 @@
     text-align: center;
 }
 
-.create-form__item {
+.create-form__item, .search-form__item {
+    display: flex;
     width: 70%;
 }
 
-.create-form__item-input {
+.create-form__item-input, .search-form__item-input {
+    margin-right: 10px;
     padding: 10px;
-    width: 100%;
+    width: 70%;
     height: 40px;
     border: 1px solid #ddd;
     border-radius: 3px;
 }
 
-.create-form__button {
+.create-form__item-select, .search-form__item-select{
+    padding: 10px;
+    width: 30%;
+    height: 40px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    appearance: none;
+}
+
+
+.create-form__button, .search-form__button {
     width: 20%;
 }
 
-.create-form__button-submit {
+.create-form__button-submit, .search-form__button-submit {
     padding: 10px;
     width: 100%;
     height: 40px;
@@ -74,9 +95,13 @@
 
 .todo-table__header {
     padding: 12px;
-    width: 20%;
     text-align: left;
     font-weight: bold;
+    display: flex;
+}
+
+.todo-table__header-span {
+    margin-right: 40%;
 }
 
 .todo-table__item:first-of-type {
@@ -91,7 +116,7 @@
 }
 
 .update-form__item {
-    width: 80%;
+    width: 40%;
     line-height: 50%;
 }
 
@@ -99,6 +124,13 @@
     width: 100%;
     outline: none;
     border: none;
+}
+
+.update-form__item-select {
+    padding: 5px;
+    width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 3px;
 }
 
 .update-form__button {
